requiring jdk 8 to compile the proejct